# appwindows

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  __init__.py  meson.build  pyproject.toml  requirements.txt  setup.py
.github/workflows/: apple_build.yml  apple_unit_tests.yml  build.yml  develop.yml  unit_tests.yml
lib/: __init__.pyi
lib/exceptions/: __init__.py
lib/geometry/: __init__.py
src/: appwindows.cc
src/appwindows/: __init__.py  appwindows.cc  bind.cc  get_finder.py
src/appwindows/base/: __init__.py  finder.py  point.py  transform.py  window.py
src/appwindows/base/size/: base.py  max_size.py
src/appwindows/core/: base_finder.h  base_window.h  bind.cc  bind.h  finder.cc  finder.h  platform.cc  platform.h  window.h
src/appwindows/core/exceptions/: bind_exceptions.cc  exceptions.cc  invalid_size.h  window_does_not_exist.h  window_does_not_found.h  window_does_not_valid.h
src/appwindows/core/geometry/: bind.cc  bind.h  bind_geometry.cc  geometry.cc  point.cc  point.h  size.cc  size.h
src/appwindows/core/layers/: background.cc  background.h  foreground.cc  foreground.h  layer.h  layer_number.cc  layer_number.h
src/appwindows/mac_os/: finder.h  window.h
src/appwindows/macos/: __init__.py  finder.h  finder.py  transform.py  window.getters.cc  window.h  window.py
src/appwindows/windows/: __init__.py  bind.cc  bind.h  finder.cc  finder.h  finder.py  transform.py  window.getters.cc  window.h  window.py  window.setters.cc
src/appwindows/x_server/: __init__.py  bind.cc  bind.h  finder.cc  finder.h  finder.py  transform.py  window.getters.cc  window.h  window.py  window.setters.cc
src/core/: base_finder.h  base_window.h  bind.cc  bind.h  core.h  platform.cc  platform.h
src/core/exceptions/: bind_exceptions.cc  bind_exceptions.h  exceptions.h  permission_denied.h  window_does_not_valid.h
src/core/geometry/: bind_geometry.cc  bind_geometry.h  geometry.h  point.cc  point.h  quad_points.h  size.cc  size.h
src/core/geometry/absolute/: size.cc  size.h
src/core/geometry/relative/: size.cc  size.h
src/macos/: finder.cc  finder.h  finder.mm  window.getters.cc  window.getters.mm  window.getters.size.mm  window.h  window.setters.cc  window.setters.mm
src/windows/: finder.cc  finder.h  window.getters.cc  window.h  window.setters.cc
src/x_server/: finder.cc  finder.h  window.getters.cc  window.h  window.setters.cc
tests/: run_tests_with_xvfb.py  test_finder.py  test_get_finder.py  test_import.py  test_window.py  window_creator.py
tests/geometry/: test_point.py  test_size.py
tests/window_creators/: __init__.py  base.py  get_creator.py  macos.py  pyside6.py  safari.py  windows.py  x_server.py
