[build-system]
requires = [
    "meson-python>=0.13.1",
    "pybind11>=2.10.0"
]
build-backend = "mesonpy"
[project]
name = "appwindows"
version = "1.0.1"
authors = [
 { name="lexter0705", email="lexter0705@gmail.com" },
]
description = "The appwindows library solves the problem of working with a graphical shell on different operating systems."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: BSD License",
   "Operating System :: Windows, Linux",
]

[project.urls]
Repository = "https://github.com/lexter0705/appwindows"
Issues = "https://github.com/lexter0705/appwindows/issues"

[tool.mesonpy]
machine-file = false

[tool.mesonpy.args]
buildtype = "release"
default-library = "shared"