[build-system]
requires = [
    "meson-python>=0.13",
    "pybind11>=2.10.0",
]
build-backend = "mesonpy"

[project]
dependencies = ["numpy >= 2.0"]
name = "appwindows"
version = "1.3.0"
authors = [
    { name = "Terochkin A.S", email = "apparser.development@gmail.com" },
]
description = "The appwindows library provides a unified way to find, inspect, and control application windows across Windows, macOS, and Linux."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X :: Aqua",
    "Typing :: Stubs Only"
]

[project.urls]
Repository = "https://github.com/lexter0705/appwindows"
Issues = "https://github.com/lexter0705/appwindows/issues"
Docs = "https://apparser.gitbook.io/appwindows"

[tool.mesonpy]
machine-file = false

[tool.mesonpy.args]
buildtype = "release"
default-library = "shared"

[tool.cibuildwheel.windows]